# src/main/java/com/deemor/ttsai/dto/alert/AlertDto.java
@@ -1,5 +1,7 @@
 package com.deemor.ttsai.dto.alert;
 
+import com.deemor.ttsai.dto.conversation.ConversationDto;
+import com.deemor.ttsai.dto.event.EventDto;
 import com.deemor.ttsai.entity.alert.AlertStatus;
 import com.deemor.ttsai.entity.audiofile.AudioFile;
 import lombok.Getter;
@@ -7,6 +9,7 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import java.time.LocalDateTime;
+import java.util.List;
 
 @Getter
 @Setter
@@ -21,4 +24,6 @@ public class AlertDto {
     private AlertStatus alertStatus;
     private LocalDateTime dateOfCreation;
     private AudioFile audioFile;
+    private List<ConversationDto> conversation;
+    private List<EventDto> events;
 }
