# src/main/java/com/deemor/ttsai/entity/request/Request.java
@@ -1,10 +1,13 @@
 package com.deemor.ttsai.entity.request;
 
+import com.deemor.ttsai.converter.ConversationListConverter;
+import com.deemor.ttsai.entity.conversation.Conversation;
 import lombok.*;
 
 import javax.persistence.*;
 import java.io.Serializable;
 import java.time.LocalDateTime;
+import java.util.List;
 
 @Entity
 @Table(name = "REQUEST")
@@ -20,12 +23,6 @@ public class Request implements Serializable {
     @Column(name = "id")
     private Long id;
 
-    @Column(name = "MESSAGE")
-    private String message;
-
-    @Column(name = "VOICE_TYPE")
-    private String voiceType;
-
     @Column(name = "REQUESTER")
     private String requester;
 
@@ -38,5 +35,9 @@ public class Request implements Serializable {
 
     @Column(name = "DATE_OF_CREATION")
     private LocalDateTime dateOfCreation;
+
+    @Column(name = "CONVERSATION")
+    @Convert(converter = ConversationListConverter.class)
+    private List<Conversation> conversation;
 
 }
